--- a/html/index.html
+++ b/html/index.html
@@ -246,8 +246,17 @@
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>Tags</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_tags</a></td>
+						<td>Tag</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_tag</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>Badge</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_badge</a></td>
 						<td></td>
 					</tr>
 					<tr>
@@ -257,6 +266,15 @@
 						<td></td>
 						<td>Cards</td>
 						<td class="al article"><a href="" class="link inner-arrow">component_card</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>Icons</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_icon</a></td>
 						<td></td>
 					</tr>
 
