--- a/html/index.html
+++ b/html/index.html
@@ -119,8 +119,8 @@
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>Variable</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_variable</a></td>
+						<td>Alert Popup</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_alert</a></td>
 						<td></td>
 					</tr>
 					<tr>
@@ -128,36 +128,8 @@
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>Typography</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_typohraphy</a></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td> </td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>Button</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_button</a></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td> </td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>Button Icons</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_button_icon</a></td>
-						<td></td>
-					</tr>
-
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>Toast</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_toast</a></td>
+						<td>Badge</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_badge</a></td>
 						<td></td>
 					</tr>
 					<tr>
@@ -174,8 +146,8 @@
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>Tab</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_tab</a></td>
+						<td>Button Icons</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_button_icon</a></td>
 						<td></td>
 					</tr>
 					<tr>
@@ -183,8 +155,35 @@
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>Input Text</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_input_text</a></td>
+						<td>Button</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_button</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>Cards</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_card</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>Group</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_group</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>Icons</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_icon</a></td>
 						<td></td>
 					</tr>
 					<tr>
@@ -210,26 +209,17 @@
 						<td></td>
 						<td></td>
 						<td></td>
+						<td>Input Text</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_input_text</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
 						<td>Input Toggle</td>
 						<td class="al article"><a href="" class="link inner-arrow">component_input_toggle</a></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>Alert Popup</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_alert</a></td>
-						<td></td>
-					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>Text Items</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_text_items</a></td>
 						<td></td>
 					</tr>
 					<tr>
@@ -246,6 +236,15 @@
 						<td></td>
 						<td></td>
 						<td></td>
+						<td>Tab</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_tab</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
 						<td>Tag</td>
 						<td class="al article"><a href="" class="link inner-arrow">component_tag</a></td>
 						<td></td>
@@ -255,8 +254,8 @@
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>Badge</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_badge</a></td>
+						<td>Text Items</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_text_items</a></td>
 						<td></td>
 					</tr>
 					<tr>
@@ -264,8 +263,8 @@
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>Cards</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_card</a></td>
+						<td>Toast</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_toast</a></td>
 						<td></td>
 					</tr>
 					<tr>
@@ -273,11 +272,28 @@
 						<td></td>
 						<td></td>
 						<td></td>
-						<td>Icons</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_icon</a></td>
+						<td>Typography</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_typohraphy</a></td>
 						<td></td>
 					</tr>
-
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>Variable</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_variable</a></td>
+						<td></td>
+					</tr>
+					<!-- <tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>list</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_list</a></td>
+						<td></td>
+					</tr> -->
 					<!-- <tr>
 						<td></td>
 						<td></td>
@@ -296,15 +312,7 @@
 						<td class="al article"><a href="" class="link inner-arrow">component_card</a></td>
 						<td></td>
 					</tr>
-					<tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>list</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_list</a></td>
-						<td></td>
-					</tr>
+					
 					<tr>
 						<td></td>
 						<td></td>
