--- a/html/PBWBU/PBWBU000001.html
+++ b/html/PBWBU/PBWBU000001.html
@@ -90,7 +90,7 @@
 				<!-- group -->
 				<div class="group py0">
 					<div class="right">
-						<button type="button" class="btn-noborder" data-micromodal-trigger="modal-businesscard"><i class="ico-sort"></i>순서 설정</button>
+						<button type="button" class="btn-noborder" data-micromodal-trigger="modal-businesscard"><i class="ico-order"></i>순서 설정</button>
 					</div>
 				</div>
 				<!-- //group -->
@@ -373,6 +373,8 @@
 									<div class="swiper-wrapper">
 										<!-- Slides -->
 										<div class="swiper-slide">
+
+											<!-- card-select -->
 											<div class="card-select">
 												<div class="inp inp-large">
 													<span class="tags tags-medium tags-black-80">A타입</span>
@@ -385,8 +387,10 @@
 													</label>
 												</div>
 											</div>
+											<!-- //card-select -->
 										</div>
 										<div class="swiper-slide">
+											<!-- card-select -->
 											<div class="card-select">
 												<div class="inp inp-large">
 													<span class="tags tags-medium tags-black-80">B타입</span>
@@ -399,8 +403,10 @@
 													</label>
 												</div>
 											</div>
+											<!-- //card-select -->
 										</div>
 										<div class="swiper-slide">
+											<!-- card-select -->
 											<div class="card-select">
 												<div class="inp inp-large">
 													<span class="tags tags-medium tags-black-80">C타입</span>
@@ -413,6 +419,7 @@
 													</label>
 												</div>
 											</div>
+											<!-- //card-select -->
 										</div>
 									</div>
 								</div>
@@ -495,7 +502,7 @@
 										</label>
 									</div>
 								</div>
-								<p class="description caution body-small">지점 주소와 전화번호는 우리금융 Portal Service &gt; 직원조회에서 본인이 속한 부점명으로 검색 후 결과에서 본인 정보를 클릭 후 수정할 수 있습니다.</p>
+								<p class="description caution body-small">지점 주소와 전화번호는 우리금융 Portal Service &gt; 직원조회에서 본인이 속한 부점명으로 검색해 수정할 수 있습니다.</p>
 							</div>
 						</div>
 						<!-- //group -->
@@ -524,7 +531,7 @@
 				showCancelButton: true,
 				showCloseButton: false,
 				reverseButtons: true,
-				title: '삭제하시겠습니까?',
+				title: '<span class="description body-xlarge fw-500">삭제하시겠습니까?</span>',
 				confirmButtonText: '예',
 				cancelButtonText: '아니요',
 				customClass: {
