--- a/html/PBWBU/PBWBU010001_nodata.html
+++ b/html/PBWBU/PBWBU010001_nodata.html
@@ -72,7 +72,7 @@
 					<button type="button" class="header-btn" aria-label="뒤로 가기"><i class="i-back"></i></button>
 				</div>
 				<div class="center">
-					<h1>내 명함 공유</h1>
+					<h1>고객 명함 관리</h1>
 				</div>
 				<div class="right">
 					<button type="button" class="header-btn" aria-label="메뉴 열기"><i class="i-menu"></i></button>
@@ -84,7 +84,6 @@
 		<!-- main-inner -->
 		<!-- content start -->
 		<div class="main-inner">
-
 
 			<!-- container -->
 			<div id="container">
@@ -100,17 +99,20 @@
 								<source srcset="../../assets/images/PBWBU/init_business_card.svg">
 								<img src="../../assets/images/PBWBU/init_business_card.svg" alt="">
 							</picture>
-							<p class="description body-large fw-500 ac">내 명함을 등록하고 공유해 보세요.</p>
+							<p class="description body-large fw-500 ac">지점에 등록된 고객 명함이 없습니다. <br> 고객 명함을 등록해 보세요.</p>
 						</div>
 						<!-- //init-regist -->
 					</div>
 					<!-- //division-center -->
+
 
 				</div>
 				<!-- //content -->
 
 			</div>
 			<!-- //container -->
+
+
 
 		</div>
 		<!-- //content end -->
@@ -120,7 +122,7 @@
 		<!-- bottom-btn -->
 		<div class="bottom-btn">
 			<div class="btn-wrap">
-				<button type="button" class="btn-large btn-primary"><i class="ico-add"></i>명함 등록</button>
+				<button type="button" class="btn-large btn-primary"><i class="ico-add"></i>고객 명함 등록</button>
 			</div>
 		</div>
 		<!-- //bottom-btn -->
@@ -129,14 +131,7 @@
 	<!-- main -->
 
 	<script>
-		$(document).ready(function() {
-			toastr.warning('', '내 명함을 먼저 등록하고 공유 해주세요.', {
-				"timeOut": 0,
-				"extendedTimeOut": 0,
-				"preventDuplicates": true,
-				"disableTimeOut": true,
-			});
-		});
+
 	</script>
 </body>
 
