--- a/html/index.html
+++ b/html/index.html
@@ -227,6 +227,15 @@
 						<td></td>
 						<td></td>
 						<td></td>
+						<td>list</td>
+						<td class="al article"><a href="" class="link inner-arrow">component_list</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
 						<td>Modal Popup</td>
 						<td class="al article"><a href="" class="link inner-arrow">component_modal</a></td>
 						<td></td>
@@ -285,15 +294,7 @@
 						<td class="al article"><a href="" class="link inner-arrow">component_variable</a></td>
 						<td></td>
 					</tr>
-					<!-- <tr>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td></td>
-						<td>list</td>
-						<td class="al article"><a href="" class="link inner-arrow">component_list</a></td>
-						<td></td>
-					</tr> -->
+
 					<!-- <tr>
 						<td></td>
 						<td></td>
@@ -459,6 +460,33 @@
 						<td>목록</td>
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWBU000001</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>초기상태</td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWBU000001_nodata</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>고객 명함 관리</td>
+						<td>목록</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWBU010001</a></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>초기상태</td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWBU010001_nodata</a></td>
 						<td></td>
 					</tr>
 				</tbody>
