--- a/html/PBWBU/PBWBU000001.html
+++ b/html/PBWBU/PBWBU000001.html
@@ -427,9 +427,6 @@
 						</div>
 						<!-- //group-form -->
 
-
-
-
 						<!-- group-form -->
 						<div class="group-form mt40">
 							<div class="group-title">
@@ -439,7 +436,7 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap">
-										<input type="text" placeholder="별칭">
+										<input type="text" title="별칭" placeholder="별칭">
 									</div>
 									<p class="validate-text"></p>
 								</div>
