--- a/html/PBWBU/PBWBU000001.html
+++ b/html/PBWBU/PBWBU000001.html
@@ -4,11 +4,10 @@
 <head>
 	<title>자산관리 영업지원 App</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 	<script src="../../assets/plugins/jquery/jquery.min.js"></script>
-
-	<!-- [plugins] -->
+<!-- [plugins] -->
 	<!-- dropzone -->
 	<link rel="stylesheet" href="../../assets/plugins/dropzone/5.9.3/dropzone.min.css">
 	<script src="../../assets/plugins/dropzone/5.9.3/dropzone.min.js"></script>
@@ -45,6 +44,8 @@
 	<!-- jquery-ui -->
 	<link rel="stylesheet" type="text/css" href="../../assets/plugins/jquery-ui/jquery-ui.css">
 	<script src="../../assets/plugins/jquery-ui/jquery-ui.min.js"></script>
+	<!-- pinch-zoom -->
+	<script src="../../assets/plugins/pinch-zoom/pinch-zoom.umd.js"></script>
 	<!-- //[plugins] -->
 
 	<link rel="stylesheet" href="../../assets/css/ui-fonts.css">
@@ -363,11 +364,11 @@
 
 					<div class="content">
 						<!-- group-form -->
-						<div class="group-form">
+						<div class="group-form mt16">
 							<div class="group-title">
 								<strong class="title-medium">명함 스타일</strong>
 							</div>
-							<div class="group-content group-content-fluid">
+							<div class="group-content group-content-fluid mt8">
 								<div class="swiper swiper-business-card">
 									<!-- Additional required wrapper -->
 									<div class="swiper-wrapper">
