--- a/html/PBWBU/PBWBU000001_nodata.html
+++ b/html/PBWBU/PBWBU000001_nodata.html
@@ -4,11 +4,10 @@
 <head>
 	<title>자산관리 영업지원 App</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 	<script src="../../assets/plugins/jquery/jquery.min.js"></script>
-
-	<!-- [plugins] -->
+<!-- [plugins] -->
 	<!-- dropzone -->
 	<link rel="stylesheet" href="../../assets/plugins/dropzone/5.9.3/dropzone.min.css">
 	<script src="../../assets/plugins/dropzone/5.9.3/dropzone.min.js"></script>
@@ -45,6 +44,8 @@
 	<!-- jquery-ui -->
 	<link rel="stylesheet" type="text/css" href="../../assets/plugins/jquery-ui/jquery-ui.css">
 	<script src="../../assets/plugins/jquery-ui/jquery-ui.min.js"></script>
+	<!-- pinch-zoom -->
+	<script src="../../assets/plugins/pinch-zoom/pinch-zoom.umd.js"></script>
 	<!-- //[plugins] -->
 
 	<link rel="stylesheet" href="../../assets/css/ui-fonts.css">
@@ -100,7 +101,7 @@
 								<source srcset="../../assets/images/PBWBU/init_business_card.svg">
 								<img src="../../assets/images/PBWBU/init_business_card.svg" alt="">
 							</picture>
-							<p class="description body-large fw-500 ac">내 명함을 등록하고 공유해 보세요.</p>
+							<p class="description info body-large ac">내 명함을 등록하고 공유해 보세요.</p>
 						</div>
 						<!-- //init-regist -->
 					</div>
