--- a/html/index.html
+++ b/html/index.html
@@ -4,45 +4,9 @@
 <head>
 	<title>😀INDEX😀</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 	<script src="../assets/plugins/jquery/jquery.min.js"></script>
-
-	<!-- [plugins] -->
-	<!-- dropzone -->
-	<link rel="stylesheet" href="../assets/plugins/dropzone/5.9.3/dropzone.min.css">
-	<script src="../assets/plugins/dropzone/5.9.3/dropzone.min.js"></script>
-	<!-- highlight -->
-	<link rel="stylesheet" href="../assets/plugins/highlight.js/11.9.0/styles/vs2015.min.css">
-	<script src="../assets/plugins/highlight.js/11.9.0/highlight.min.js"></script>
-	<link rel="stylesheet" href="../assets/plugins/jstree/3.3.16/themes/default/style.min.css">
-	<!-- quill -->
-	<link rel="stylesheet" href="../assets/plugins/quill/2.0.2/quill.snow.css">
-	<script src="../assets/plugins/quill/2.0.2/quill.js"></script>
-	<script src="../assets/plugins/quill/quill-resize-module/quill-resize-module.min.js"></script>
-	<!-- jstree -->
-	<script src="../assets/plugins/jstree/3.3.16/jstree.min.js"></script>
-	<!-- micromodal -->
-	<link rel="stylesheet" href="../assets/plugins/micromodal/0.4.10/micromodal.css">
-	<script src="../assets/plugins/micromodal/0.4.10/micromodal.min.js"></script>
-	<!-- sortable -->
-	<script src="../assets/plugins/sortable/1.15.2/Sortable.min.js"></script>
-	<!-- sweetalert2 -->
-	<link rel="stylesheet" href="../assets/plugins/sweetalert2/11.11.0/sweetalert2.min.css">
-	<script src="../assets/plugins/sweetalert2/11.11.0/sweetalert2.min.js"></script>
-	<!-- swiper -->
-	<link rel="stylesheet" href="../assets/plugins/swiper/11.1.1/swiper-bundle.min.css">
-	<script src="../assets/plugins/swiper/11.1.1/swiper-bundle.min.js"></script>
-	<!-- tippy -->
-	<script src="../assets/plugins/popper.js/2.11.8/umd/popper.min.js"></script>
-	<script src="../assets/plugins/popper.js/2.11.8/umd/tippy-bundle.umd.min.js"></script>
-	<!-- toastr -->
-	<link rel="stylesheet" type="text/css" href="../assets/plugins/toastr/2.1.4/toastr.min.css">
-	<script src="../assets/plugins/toastr/2.1.4/toastr.min.js"></script>
-	<!-- jquery-ui -->
-	<link rel="stylesheet" type="text/css" href="../assets/plugins/jquery-ui/jquery-ui.css">
-	<script src="../assets/plugins/jquery-ui/jquery-ui.min.js"></script>
-	<!-- //[plugins] -->
 
 	<!-- ui source -->
 	<link rel="stylesheet" href="../assets/css/ui-fonts.css">
@@ -50,8 +14,8 @@
 	<link rel="stylesheet" href="../assets/css/ui-default.css">
 	<link rel="stylesheet" href="../assets/css/ui-plugins.css">
 	<link rel="stylesheet" href="../assets/css/ui-guide.css">
-	<script src="../assets/js/ui-script.js"></script>
 
+	<script src="../assets/js/ui-script.js"></script>
 	<!-- //ui source -->
 </head>
 
@@ -489,6 +453,15 @@
 						<td class="al article"><a href="" class="link inner-arrow">PBWBU010001_nodata</a></td>
 						<td></td>
 					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>상세</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWBU020001</a></td>
+						<td></td>
+					</tr>
 				</tbody>
 
 
@@ -501,10 +474,6 @@
 	</div>
 	<!-- /.content -->
 
-
-	<!-- jQuery -->
-	<script src="../assets/plugins/jquery/jquery.min.js"></script>
-	<!-- jQuery UI 1.11.4 -->
 	<script>
 		$(".link").each(function() {
 			var linkName = $(this).html();
