--- a/html/plugins/naversmarteditor.html
+++ b/html/plugins/naversmarteditor.html
@@ -5,7 +5,7 @@
 	<title>신한투자증권프로젝트메타</title>
 	<meta charset="utf-8">
 	<title>naversmarteditor</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="../../assets/plugins/naversmarteditor/css/ko_KR/smart_editor2.css">
 </head>
 
