--- a/html/plugins/sortable.html
+++ b/html/plugins/sortable.html
@@ -5,7 +5,7 @@
 <head>
 	<title>신한투자증권프로젝트메타</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 	<script src="../../assets/plugins/jquery/jquery.min.js"></script>
 
